--- a/index.html
+++ b/index.html
@@ -9,18 +9,38 @@
     
 </body>
 </html>
+<!-- written as 1st heading with the <h1> tag and underlined with the <U> tag -->
 <h1>
-    Welcome to my homepage
+    <u>
+        Welcome to my homepage
+    </u>
 </h1>
+<!-- written in bold using the <b> tag and in using the <i> tag italics and underlined using the <u> tag as 2nd heading -->
 <h2>
-    Who is Brian Gitucha?
+   <b>
+     <i>
+         <u> 
+             Who is Brian Gitucha
+         </u>
+     </i> 
+  </b>
 </h2>
 <p>
-   Still in the process of finding out but i am an 18 year old male,living in limuru along waiyaki way,i am a highschool
-   graduate from Murang'a Highschool studying software engineering core program at Zindua school at 07 mpaka house in westlands.
+    <!-- emphasized using the <em> tag -->
+   <em>
+     Still in the process of finding out but i am an 18 year old male,living in limuru along waiyaki way,i am a highschool
+     graduate from Murang'a Highschool studying software engineering core program at Zindua school at 07 mpaka house in westlands.
+   </em>
 </P>
 <p>
-   I love reading novels and books,a lot of my expensive time is taken up by music,i am a part time fps gamer,
-   I am passionate about football.I am an aspiring tech developer,looking to also study aerospace engineering 
-   as my passionate frontier in this little tale we call life.   
+    <!-- emphasized using the <em> tag -->
+   <em>
+     I love reading novels and books,a lot of my expensive time is taken up by music,i am a part time fps gamer,
+     I am passionate about football.I am an aspiring tech developer,looking to also study aerospace engineering 
+     as my passionate frontier in this little tale we call life.
+  </em>   
 </p>
+   <!--written in bold using the <strong> tag -->
+<strong> 
+    THANK YOU
+</strong>
